# lazy_dm

./: .gitignore  README.md  pyproject.toml
lazy_dm/: app.py  config.py
lazy_dm/api/: Dockerfile  api.go  app.yaml  go.mod  go.sum
lazy_dm/python_api/: Dockerfile  deploy_docker.sh  pyproject.toml  requirements.txt
lazy_dm/python_api/lazy_dm_api/: main.py
lazy_dm/python_api/lazy_dm_api/data/: tables.json
lazy_dm/site/: Dockerfile  app.js  default.conf  index.html
lazy_dm/site/lazydm/: app.js  index.html  treasure.css
lazy_dm/static/: style.css
lazy_dm/templates/: events.html  index.html  items.html  monuments.html  name.html  traps.html
utils/txt_on_img/: main.py
