[tool.poetry]
name = "lazy_dm"
version = "0.1.0"
description = "A Flask app to interact with Lazy DM's Guide content."
authors = ["Mike Gray <mike@graywind.org>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pydocstyle = "^5.0.2"
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
