[tool.poetry]
name = "lazy_dm_api"
version = "1.3.0"
description = "API for the Lazy DM Generators"
authors = ["mikejgray <mike@graywind.org>"]
license = "Creative Commons 4.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
mangum = "^0.12.2"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
flake8 = "^3.9.2"
black = "^21.6b0"
bandit = "^1.7.0"
mypy = "^0.902"
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
